--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.0.1",
+    "react-loading-skeleton": "^3.4.0",
+    "react-player": "^2.16.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
