--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "compressorjs": "^1.2.1",
     "emoji-picker-react": "^4.9.2",
+    "gif-picker-react": "^1.3.2",
     "lucide-react": "^0.354.0",
     "next": "14.1.3",
     "react": "^18",
