--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.9.2",
+    "gif-picker-react": "^1.3.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
