--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "core-js-pure": "^3.37.0",
     "emoji-picker-react": "^4.9.2",
     "gif-picker-react": "^1.3.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
