--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "emoji-picker-react": "^4.9.2",
     "gif-picker-react": "^1.3.2",
     "lucide-react": "^0.354.0",
-    "next": "14.1.3",
+    "next": "^14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
